# paper_zebendelib

./: .gitignore  README.md  _config.yml  pyproject.toml
code_exemples/: numpy_ix_.ipynb
compared_perf/: basic_04.txt  basic_12.txt  opt_04.txt  opt_12.txt
diagrams/: flow_diag.md
jss-article-tex/: article.aux  article.bbl  article.blg  article.fdb_latexmk  article.fls  article.out
notebooks/: extract_data.ipynb  graphics.ipynb  notas.txt  performance_calcs.ipynb  test_4_series_basic.ipynb  test_4_series_dcca_package.ipynb  test_4_series_opt.ipynb  test_4_series_pure_python.ipynb  test_n_series_DCCA_R.ipynb  test_n_series_DFA_R.ipynb  test_n_series_basic.ipynb  test_n_series_dcca_package.ipynb  test_n_series_opt.ipynb  test_n_series_pure_python.ipynb  test_nb.md  teste_01.ipynb  zebende_zig_tests.py
paper_v01/: article.aux  article.bbl  article.blg  article.fdb_latexmk  article.fls  article.out  article.tex  library.bib  refs.bib
paper_v02/: article.aux  article.bbl  article.blg  article.fdb_latexmk  article.fls  article.out  article.tex  jss.cls  refs.bib
tests_r/: export_bibtex.R  notes.md  results_4_series_DCCA.txt  results_4_series_DFA.txt  selected_packages.bib  test r_DCCA_PKG.R  test r_DFA_PKG.R  test_4_series_DCCA.R  test_4_series_DFA.R  test_n_series_DCCA.R  test_n_series_DFA.R  tests_r.Rproj
